# SceneBrowser

./: CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  README.md  TASKS.md  index.html  package-lock.json  package.json  tsconfig.json
.github/: CODEOWNERS
.github/workflows/: ci.yml  manual-build.yml  pr-artifacts.yml  release.yml
doc/: FAVORITES_FEATURE.md  INSTALLATION.ja.md  INSTALLATION.md  SETUP.md  phase1-implementation-plan.md  spec.md
doc/design/: api-specification.md  architecture.md
doc/tasks/: 01-project-setup.md  02-database-schema.md  03-backend-services.md  04-tauri-commands.md  05-frontend-types.md  06-frontend-ui.md  07-integration-testing.md  08-ffmpeg-setup.md  09-ci-cd-setup.md
scripts/: create-issues.sh
src/: App.css  App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/migrations/: 001_initial_schema.sql  002_video_player_settings.sql  003_add_favorites.sql  per_folder_schema.sql
src-tauri/src/: error.rs  lib.rs  main.rs
src-tauri/src/commands/: favorites.rs  folder.rs  mod.rs  settings.rs  system.rs  tests.rs  thumbnail.rs  video.rs
src-tauri/src/models/: folder.rs  mod.rs  settings.rs  video.rs
src-tauri/src/services/: database.rs  metadata.rs  mod.rs  thumbnail_gen.rs  video_scanner.rs
src-tauri/src/utils/: ffmpeg.rs  hashing.rs  mod.rs  paths.rs
src/components/: FilterBar.css  FilterBar.test.tsx  FilterBar.tsx  FolderList.css  FolderList.test.tsx  FolderList.tsx  Settings.css  Settings.test.tsx  Settings.tsx  Sidebar.css  Sidebar.tsx  VideoCard.css  VideoCard.test.tsx  VideoCard.tsx  VideoGrid.css  VideoGrid.tsx
(+7 files in other folders)
